--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,12 +6,10 @@
     <title>E-Commerce Site</title>
 </head> 
 <body> 
-    <nav>
-    <a href="#">Home</a>
-    <a href="#">Admin</a>
-    <a href="#">Shop</a>
-</nav>
 
+
+
+{{>navbar}}
 
 <h1>Welcome to the Ecommerce Site</h1>
 </body>
