--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,6 +1,7 @@
 .button-group{
     display: flex;
-    justify-content:center;
+    flex-wrap: wrap;
+    justify-content:space-between;
 }
 .my-product-image{
     width: 200px;
