--- a/views/admin/home.hbs
+++ b/views/admin/home.hbs
@@ -6,32 +6,75 @@
     <title>Admin Home Page</title>
 
     <style>
-        button-group{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
+        .button-group{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+}
+.my-product-image{
+    width: 200px;
+  
+}
 
-        }
+.my-product-image img{
+    width: 100%;
+}
 
-        button{
+
+
+          button{
             width: 100px;
             min-height: 30px;
             background-color: coral;
 
         }
+        *{
+    margin: 0;
+    padding: 0;
+}
+nav{
+    display: flex;
+    justify-content: space-around;
+    border: 1px solid black;
+    padding: 10px;
+}
+
+nav a{
+    text-decoration: none;
+}
+
+nav a:link{
+    text-decoration: none;
+    color: black;
+}
+
+nav a:visited{
+    color: black;
+}
+
+nav a:hover{
+    text-decoration: underline;
+    color: blue;
+}
     </style>
+
+    {{>generalcss}}
 </head>
 <body>
 
- 
+
     <h1>Welcome to the home page</h1>
 
        {{>navbar}}
        
        <div class="button-group">
-
-
+        <a href="/admin/products/all">
         <button>View Products</button>
+        </a>
+
+        <a href="/admin/products/add">
+        <button>Add Products</button>
+        </a>
         
        </div>
           
