--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -2,4 +2,5 @@
     <a href="/home">Home</a>
     <a href="/admin">Admin</a>
     <a href="/shop">Shop</a>
+       <a href="/shop/cart">Cart</a>
 </nav>
