--- a/views/shop/home.hbs
+++ b/views/shop/home.hbs
@@ -12,6 +12,8 @@
             padding: 10px;
             width: 80%;
             margin: auto;
+            flex-wrap: wrap;
+            row-gap: 10px;
         }
 
         .product-item {
